# numa_mem_plot

./: .gitignore  README.md  pyproject.toml
scripts/: install_ubuntu_numastat.sh  install_ubuntu_prereqs.sh
src/numa_mem_plot/: __init__.py  __main__.py  numa_mem_plot.py
src/numa_mem_plot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
